feat(dockerfile): add user to dockerfile

--- a/maven-pipeline/Dockerfile
+++ b/maven-pipeline/Dockerfile
@@ -1,8 +1,14 @@
 FROM registry.access.redhat.com/ubi9/ubi:latest AS base
 
 
+ARG USER_ID=1001
+ARG GROUP_ID=1001
+ENV USER_NAME=default
+
+ENV HOME="/app"
+ENV PATH="/app/.local/bin:${PATH}"
+
 ENV container=oci
-ENV USER=default
 
 USER root
 
@@ -13,11 +19,22 @@ dnf install git nano java-21-openjdk maven -y; \
 # clear cache
 dnf clean all
 
+WORKDIR ${HOME}
+
+# Create user and set permissions
+RUN groupadd -g ${GROUP_ID} ${USER_NAME} && \
+    useradd -u ${USER_ID} -r -g ${USER_NAME} -d ${HOME} -s /sbin/nologin ${USER_NAME} && \
+    chown -R ${USER_NAME}:${USER_NAME} ${HOME} && \
+    chmod -R 0750 ${HOME}
+
+#-----------------------------
+
 # Dev target
 FROM base AS dev
 COPY .devcontainer/devtools.sh /tmp/devtools.sh
-RUN  /tmp/devtools.sh
-USER default
+# Install extra dev tools as root, then run as default user
+RUN  /tmp/devtools.sh  
+USER ${USER_NAME}
 
 # DEPLOYMENT EXAMPLE:
 #-----------------------------
@@ -27,31 +44,32 @@ FROM base
 
 ## Install tomcat server (EXAMPLE)
 ADD https://dlcdn.apache.org/tomcat/tomcat-11/v11.0.5/bin/apache-tomcat-11.0.5.tar.gz apache-tomcat-11.0.5.tar.gz
+## REPLACE: replace username and password
 RUN tar xvf apache-tomcat-*.tar.gz; \
 mv apache-tomcat-11.0.5 /usr/local/tomcat11/; \
 <<EOF cat >> /usr/local/tomcat11/conf/tomcat-users.xml
   <tomcat-users>
       <role rolename="manager-gui"/>
       <role rolename="admin-gui"/>
-      <user username="default" password="default" roles="manager-gui,admin-gui"/>
+      <user username="${USER_NAME}" password="${USER_NAME}" roles="manager-gui,admin-gui"/>
   </tomcat-users>
 EOF
 
-
-## Make App folder, copy project into container
-WORKDIR /app
+## Move to app folder, copy project into container
+WORKDIR ${HOME}
 ## REPLACE: replace this COPY statement with project specific files/folders
 COPY . . 
+
+# Check home
+RUN chown -R default:default ${HOME} && \
+    chmod -R 0750 ${HOME}
+
+USER ${USER_NAME}
 
 ## Install project requirements, build project
 RUN mvn clean package; \
 cp target/*.war /usr/local/tomcat11/webapps/
 
-## clarify permissions
-RUN chown -R default:0 /app && \
-    chmod -R g=u /app
-
 ## Expose port and run app
 EXPOSE 8080
-USER default
 CMD [ "/usr/local/tomcat11/bin/startup.sh"  ]
