--- a/node-pipeline/Dockerfile
+++ b/node-pipeline/Dockerfile
@@ -1,27 +1,39 @@
 FROM registry.access.redhat.com/ubi9/ubi:latest AS base
 
+ARG USER_ID=1001
+ARG GROUP_ID=1001
+ENV USER_NAME=default
+
+ENV HOME="/app"
+ENV PATH="/app/.local/bin:${PATH}"
 
 ENV container=oci
-ENV USER=default
 
 USER root
 
-COPY .nvmrc .nvmrc
-
 # Check for package update
 RUN dnf -y update-minimal --security --sec-severity=Important --sec-severity=Critical && \
-# enable nodejs verson
-# dnf module -y enable nodejs:$(cat .nvmrc | cut -c2-3) && \
 # Install git, nano, nodejs and npm 
 dnf install git nano nodejs npm -y; \
 # clear cache
 dnf clean all
 
+WORKDIR ${HOME}
+
+# Create user and set permissions
+RUN groupadd -g ${GROUP_ID} ${USER_NAME} && \
+    useradd -u ${USER_ID} -r -g ${USER_NAME} -d ${HOME} -s /sbin/nologin ${USER_NAME} && \
+    chown -R ${USER_NAME}:${USER_NAME} ${HOME} && \
+    chmod -R 0750 ${HOME}
+
+#-----------------------------
+
 # Dev target
 FROM base AS dev
 COPY .devcontainer/devtools.sh /tmp/devtools.sh
-RUN  /tmp/devtools.sh
-USER default
+# Install extra dev tools as root, then run as default user
+RUN  /tmp/devtools.sh  
+USER ${USER_NAME}
 
 # DEPLOYMENT EXAMPLE:
 #-----------------------------
@@ -29,22 +41,24 @@ USER default
 # Prod target
 FROM base
 
-## Make App folder, copy project into container
-WORKDIR /app
+## Move to app folder, copy project into container
+WORKDIR ${HOME}
 ## REPLACE: replace this COPY statement with project specific files/folders
 COPY . . 
+
+# Check home
+RUN chown -R default:default ${HOME} && \
+    chmod -R 0750 ${HOME}
+
+USER ${USER_NAME}
 
 ## Install project requirements, build project
 RUN npm install lite-server --save-dev; \
 npm build --prod
 
-## clarify permissions
-RUN chown -R default:0 /app && \
-    chmod -R g=u /app
-
 ## Expose port and run app
 EXPOSE 8080
-USER default
+
 CMD [ "lite-server --baseDir='dist/*/'"  ]
 
 # EXPOSE 3000
