--- a/gradle-pipeline/Dockerfile
+++ b/gradle-pipeline/Dockerfile
@@ -61,15 +61,16 @@ WORKDIR ${HOME}
 ## REPLACE: replace this COPY statement with project specific files/folders
 COPY . . 
 
-# Check home
+## Check home and apache folder
 RUN chown -R default:default ${HOME} && \
-    chmod -R 0750 ${HOME}
+    chmod -R 0750 ${HOME}; \
+    chown -R default:default /usr/local/tomcat11/webapps/ 
 
 USER ${USER_NAME}
 
 ## Install project requirements, build project
-RUN ./gradlew clean build; \
-cp /build/libs/*.war /usr/local/tomcat11/webapps/
+RUN ./gradlew clean war; \
+cp ./app/build/libs/*.war /usr/local/tomcat11/webapps/
 
 ## Expose port and run app
 EXPOSE 8080
