--- a/cpp-pipeline/.devcontainer/devcontainer.json
+++ b/cpp-pipeline/.devcontainer/devcontainer.json
@@ -44,7 +44,8 @@
 			},
 			 "editor.tabSize": 4,
 			 "workbench.tree.indent": 14,
-			 "trivy.offlineScan": true
+			 "trivy.offlineScan": true,
+             "terminal.integrated.defaultProfile.linux": "zsh",
 			 //"files.autoSaveWhenNoErrors": true,
 			 //"files.autoSaveWorkspaceFilesOnly": true
 		  }
