--- a/python-uv-pipeline/.devcontainer/devcontainer.json
+++ b/python-uv-pipeline/.devcontainer/devcontainer.json
@@ -47,7 +47,8 @@
 			},
 			 "editor.tabSize": 4,
 			 "workbench.tree.indent": 14,
-			 "trivy.offlineScan": true
+			 "trivy.offlineScan": true,
+             "terminal.integrated.defaultProfile.linux": "zsh",
 			 //"files.autoSaveWhenNoErrors": true,
 			 //"files.autoSaveWorkspaceFilesOnly": true
 		  }
