feat(semgrep): add semgrep html parse and clean actions

--- a/gradle-pipeline/Dockerfile
+++ b/gradle-pipeline/Dockerfile
@@ -8,7 +8,6 @@ ENV USER_NAME=default
 ENV HOME="/app"
 ENV PATH="/app/.local/bin:${PATH}"
 
-ENV container=oci
 
 USER root
 
@@ -23,7 +22,7 @@ WORKDIR ${HOME}
 
 # Create user and set permissions
 RUN groupadd -g ${GROUP_ID} ${USER_NAME} && \
-    useradd -u ${USER_ID} -r -g ${USER_NAME} -d ${HOME} -s /sbin/nologin ${USER_NAME} && \
+    useradd -u ${USER_ID} -r -g ${USER_NAME} -d ${HOME} -s /bin/bash ${USER_NAME} && \
     chown -R ${USER_NAME}:${USER_NAME} ${HOME} && \
     chmod -R 0750 ${HOME}
 
@@ -33,7 +32,7 @@ RUN groupadd -g ${GROUP_ID} ${USER_NAME} && \
 FROM base AS dev
 COPY .devcontainer/devtools.sh /tmp/devtools.sh
 # Install extra dev tools as root, then run as default user
-RUN  /tmp/devtools.sh  
+RUN chmod +x devtools.sh && /tmp/devtools.sh  
 USER ${USER_NAME}
 
 # DEPLOYMENT EXAMPLE:
@@ -62,7 +61,7 @@ WORKDIR ${HOME}
 COPY . . 
 
 ## Check home and apache folder
-RUN chown -R default:default ${HOME} && \
+RUN chown -R ${USER_NAME}:${USER_NAME} ${HOME} && \
     chmod -R 0750 ${HOME}; \
     chown -R default:default /usr/local/tomcat11/webapps/ 
 
