--- a/python-poetry-pipeline/.devcontainer/devcontainer.json
+++ b/python-poetry-pipeline/.devcontainer/devcontainer.json
@@ -49,8 +49,7 @@
 			},
 			 "editor.tabSize": 4,
 			 "workbench.tree.indent": 14,
-			 "trivy.offlineScan": true,
-             "terminal.integrated.defaultProfile.linux": "zsh",
+			 "trivy.offlineScan": true           
 			 //"files.autoSaveWhenNoErrors": true,
 			 //"files.autoSaveWorkspaceFilesOnly": true
 		  }
