--- a/cpp-pipeline/.devcontainer/devcontainer.json
+++ b/cpp-pipeline/.devcontainer/devcontainer.json
@@ -37,6 +37,8 @@
 			"esbenp.prettier-vscode",
 			"mechatroner.rainbow-csv",
 			"editorconfig.editorconfig"
+			// Qt C++
+			//"TheQtCompany.qt-cpp",
 		],
 		  "settings": {
 			"[cpp]": {
@@ -44,8 +46,7 @@
 			},
 			 "editor.tabSize": 4,
 			 "workbench.tree.indent": 14,
-			 "trivy.offlineScan": true,
-             "terminal.integrated.defaultProfile.linux": "zsh",
+			 "trivy.offlineScan": true          
 			 //"files.autoSaveWhenNoErrors": true,
 			 //"files.autoSaveWorkspaceFilesOnly": true
 		  }
