--- a/gradle-pipeline/.devcontainer/devcontainer.json
+++ b/gradle-pipeline/.devcontainer/devcontainer.json
@@ -25,6 +25,7 @@
 		  // Add the IDs of extensions you want installed when the container is created.
 		  "extensions": [
 			"vscjava.vscode-gradle",
+			"redhat.java",
 			"vscjava.vscode-java-pack",
 			"vscjava.vscode-java-test",
 			"vscjava.vscode-java-dependency",
@@ -48,8 +49,7 @@
 			},
 			 "editor.tabSize": 4,
 			 "workbench.tree.indent": 14,
-			 "trivy.offlineScan": true,
-             "terminal.integrated.defaultProfile.linux": "zsh",
+			 "trivy.offlineScan": true  
 			 //"files.autoSaveWhenNoErrors": true,
 			 //"files.autoSaveWorkspaceFilesOnly": true
 		  }
