--- a/node-pipeline/.github/actions/node/action.yml
+++ b/node-pipeline/.github/actions/node/action.yml
@@ -1,5 +1,5 @@
-name: Angular CI
-description: 'Builds, tests, and deploys a Node.js Angular application'
+name: Node CI
+description: 'Builds, tests, and deploys a Node.js application'
 
 inputs:
   github_token:
@@ -77,7 +77,7 @@ runs:
       working-directory: ${{ inputs.source_dir }}
       shell: bash
 
-    - name: Test Angular application (headless)
+    - name: Test Node application (headless)
       run: npm run test:ci
       working-directory: ${{ inputs.source_dir }}
       shell: bash
