--- a/gradle-pipeline/.github/actions/gradle/action.yml
+++ b/gradle-pipeline/.github/actions/gradle/action.yml
@@ -135,7 +135,7 @@ runs:
       with:
         image-ref: ${{ inputs.docker_image_name }}:${{ env.formatted_branch_name }}
         format: template
-        template: ".github/actions/gradle/trivy.tpl"
+        template: "@.github/actions/gradle/trivy.tpl"
         output: trivy-high-critical.html
         ignore-unfixed: true
         vuln-type: 'os,library'
