--- a/maven-pipeline/.github/actions/maven/action.yml
+++ b/maven-pipeline/.github/actions/maven/action.yml
@@ -136,7 +136,7 @@ runs:
       with:
         image-ref: ${{ inputs.docker_image_name }}:${{ env.formatted_branch_name }}
         format: template
-        template: ".github/actions/maven/trivy.tpl"
+        template: "@.github/actions/maven/trivy.tpl"
         output: trivy-high-critical.html
         ignore-unfixed: true
         vuln-type: 'os,library'
