--- a/node-pipeline/.github/actions/node/action.yml
+++ b/node-pipeline/.github/actions/node/action.yml
@@ -147,7 +147,7 @@ runs:
       with:
         image-ref: ${{ inputs.docker_image_name }}:${{ env.formatted_branch_name }}
         format: template
-        template: ".github/actions/node/trivy.tpl"
+        template: "@.github/actions/node/trivy.tpl"
         output: trivy-high-critical.html
         ignore-unfixed: true
         vuln-type: 'os,library'
