feat(actions): separate build test and deploy

--- a/node-pipeline/.github/workflows/node.yml
+++ b/node-pipeline/.github/workflows/node.yml
@@ -24,10 +24,20 @@ jobs:
         fetch-depth: 0  
 
     - name: Run Custom Nodejs action
-      uses: ./.github/actions/node
+      uses: ./.github/actions/build
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        docker_image_name: ${{ env.DOCKER_IMAGE_NAME || github.event.repository.name }}
-        dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
-        dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
         source_dir: ${{ env.NODEJS_APP_SOURCE_DIR }}
+
+    - name: Test Dockerfile 
+      uses: ./.github/actions/test
+      with:
+        docker_repo_name: ${{ env.DOCKER_IMAGE_NAME || github.event.repository.name }}
+  
+    - name: Deploy Dockerfile 
+      if: ${{ github.ref_name == 'main' && github.event_name == 'push' }}
+      uses: ./.github/actions/test
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        docker_repo_name: ${{ env.DOCKER_IMAGE_NAME || github.event.repository.name }}
+    
