--- a/cpp-pipeline/.github/workflows/cpp.yml
+++ b/cpp-pipeline/.github/workflows/cpp.yml
@@ -24,13 +24,22 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Run Custom CPP CI action
-      uses: ./.github/actions/cpp
+    - name: Run Custom Build CI action
+      uses: ./.github/actions/build
       with: 
         github_token: ${{ secrets.GITHUB_TOKEN }}
         gitleaks_token: ${{ secrets.GITLEAKS_TOKEN }}
         source_dir:  ${{ env.PROJECT_DIR }}
-        dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
-        dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
-        docker_image_name: ${{ env.DOCKER_IMAGE_NAME || github.event.repository.name }}
         build_system: ${{env.BUILD_SYSTEM}}
+
+    - name: Test Dockerfile 
+      uses: ./.github/actions/test
+      with:
+        docker_repo_name: ${{ env.DOCKER_IMAGE_NAME || github.event.repository.name }}
+
+    - name: Deploy Dockerfile 
+      if: ${{ github.ref_name == 'main' && github.event_name == 'push' }}
+      uses: ./.github/actions/test
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        docker_repo_name: ${{ env.DOCKER_IMAGE_NAME || github.event.repository.name }}
