test(Dockerfile): fix devtools path

--- a/node-pipeline/Dockerfile
+++ b/node-pipeline/Dockerfile
@@ -30,7 +30,7 @@ RUN groupadd -g ${GROUP_ID} ${USER_NAME} && \
 FROM base AS dev
 COPY .devcontainer/devtools.sh /tmp/devtools.sh
 # Install extra dev tools as root, then run as default user
-RUN chmod +x devtools.sh && /tmp/devtools.sh
+RUN chmod +x /tmp/devtools.sh && /tmp/devtools.sh
 # Open dev port
 EXPOSE 8000
 USER ${USER_NAME}
