--- a/python-uv-pipeline/Dockerfile
+++ b/python-uv-pipeline/Dockerfile
@@ -34,7 +34,7 @@ RUN uv tool install ruff@latest
 FROM base AS dev
 COPY .devcontainer/devtools.sh /tmp/devtools.sh
 # Install extra dev tools as root, then run as default user
-RUN chmod +x devtools.sh && /tmp/devtools.sh  
+RUN chmod +x /tmp/devtools.sh && /tmp/devtools.sh  
 USER ${USER_NAME}
 
 # DEPLOYMENT EXAMPLE:
