--- a/golang-pipelne/.github/workflows/golang.yml
+++ b/golang-pipelne/.github/workflows/golang.yml
@@ -8,23 +8,23 @@ env:
   GOLANG_VERSION: "1.23"
   GOLANG_DEPENDENCIES: ""
   
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
+  id-token: write
+  packages: write
+  actions: read
+  security-events: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      issues: write
-      pull-requests: write
-      id-token: write
-      packages: write
-      actions: read
-      security-events: write
     steps:
     - name: Checkout
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-
     - name: Run Custom Golang CI action
       uses: ./.github/actions/build
       with: 
@@ -33,12 +33,20 @@ jobs:
         source_dir: ${{ env.PROJECT_DIR }}
         golang_version: ${{env.GOLANG_VERSION}}
         golang_packages: ${{ env.GOLANG_DEPENDENCIES }}
-
+  test:
+    needs:
+      - build
+    runs-on: ubuntu-latest
+    steps:
     - name: Test Dockerfile 
       uses: ./.github/actions/test
       with:
         docker_repo_name: ${{ env.DOCKER_IMAGE_NAME || github.event.repository.name }}
-
+  deploy:
+    needs:
+      - test
+    runs-on: ubuntu-latest
+    steps:
     - name: Deploy Dockerfile 
       if: ${{ github.ref_name == 'main' && github.event_name == 'push' }}
       uses: ./.github/actions/deploy
