--- a/node-pipeline/.github/workflows/node.yml
+++ b/node-pipeline/.github/workflows/node.yml
@@ -6,17 +6,18 @@ env:
   DOCKER_IMAGE_NAME: ""
   NODEJS_APP_SOURCE_DIR: "."
 
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
+  id-token: write
+  packages: write
+  actions: read
+  security-events: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      issues: write
-      pull-requests: write
-      id-token: write
-      packages: write
-      actions: read
-      security-events: write
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -29,15 +30,24 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         source_dir: ${{ env.NODEJS_APP_SOURCE_DIR }}
 
+  test:
+    needs:
+      - build
+    runs-on: ubuntu-latest
+    steps:
     - name: Test Dockerfile 
       uses: ./.github/actions/test
       with:
         docker_repo_name: ${{ env.DOCKER_IMAGE_NAME || github.event.repository.name }}
-  
+
+  deploy:
+    needs:
+      - test
+    runs-on: ubuntu-latest
+    steps:
     - name: Deploy Dockerfile 
       if: ${{ github.ref_name == 'main' && github.event_name == 'push' }}
       uses: ./.github/actions/deploy
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         docker_repo_name: ${{ env.DOCKER_IMAGE_NAME || github.event.repository.name }}
-    
