fix(actions): fix dockerfile release

--- a/node-pipeline/.github/workflows/node.yml
+++ b/node-pipeline/.github/workflows/node.yml
@@ -35,6 +35,10 @@ jobs:
       - build
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: Test Dockerfile 
       uses: ./.github/actions/test
       with:
@@ -45,6 +49,10 @@ jobs:
       - test
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: Deploy Dockerfile 
       if: ${{ github.ref_name == 'main' && github.event_name == 'push' }}
       uses: ./.github/actions/deploy
