--- a/golang-pipelne/.github/workflows/golang.yml
+++ b/golang-pipelne/.github/workflows/golang.yml
@@ -38,6 +38,10 @@ jobs:
       - build
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: Test Dockerfile 
       uses: ./.github/actions/test
       with:
@@ -47,6 +51,10 @@ jobs:
       - test
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: Deploy Dockerfile 
       if: ${{ github.ref_name == 'main' && github.event_name == 'push' }}
       uses: ./.github/actions/deploy
