--- a/node-pipeline/.github/actions/test/action.yaml
+++ b/node-pipeline/.github/actions/test/action.yaml
@@ -8,6 +8,11 @@ inputs:
 runs:
   using: 'composite'
   steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0   
+        
     - name: Extract branch name
       id: branch-names
       shell: bash
