--- a/python-uv-pipeline/.github/actions/deploy/action.yaml
+++ b/python-uv-pipeline/.github/actions/deploy/action.yaml
@@ -13,6 +13,16 @@ runs:
   using: 'composite'
   steps:
 
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0   
+
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0   
+        
     - name: Extract branch name
       id: branch-names
       shell: bash
@@ -70,7 +80,7 @@ runs:
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ghcr.io/${{ github.repository_owner }}/${{ inputs.docker_repo_name }})
+        images: ghcr.io/${{ github.repository_owner }}/${{ inputs.docker_repo_name }}
         tags: |
           ${{ env.image_tag }}
           latest
