feat(home): add default home

--- a/gradle-pipeline/Dockerfile
+++ b/gradle-pipeline/Dockerfile
@@ -5,9 +5,9 @@ ARG USER_ID=1001
 ARG GROUP_ID=1001
 ENV USER_NAME=default
 
-ENV HOME="/app"
-ENV PATH="/app/.local/bin:${PATH}"
-
+ENV HOME="/home/${USER_NAME}"
+ENV PATH="${HOME}/.local/bin:${PATH}"
+ENV APP="/app"
 
 USER root
 
@@ -18,11 +18,11 @@ dnf install git nano java-21-openjdk -y; \
 # clear cache
 dnf clean all
 
-WORKDIR ${HOME}
-
 # Create user and set permissions
 RUN groupadd -g ${GROUP_ID} ${USER_NAME} && \
     useradd -u ${USER_ID} -r -g ${USER_NAME} -d ${HOME} -s /bin/bash ${USER_NAME} 
+
+WORKDIR ${HOME}
 
 #-----------------------------
 
@@ -53,16 +53,16 @@ mv apache-tomcat-11.0.5 /usr/local/tomcat11/; \
 EOF
 
 ## Move to app folder, copy project into container
-WORKDIR ${HOME}
-
+WORKDIR ${APP}
 ## REPLACE: replace this COPY statement with project specific files/folders
 COPY . . 
 
-## Check home and apache folder
-RUN chown -R ${USER_NAME}:${USER_NAME} ${HOME} && \
-    chmod -R 0750 ${HOME}; \
+# Check App permissions
+RUN chown -R ${USER_NAME}:${USER_NAME} ${APP} && \
+    chmod -R 0750 ${APP}; \
     chown -R default:default /usr/local/tomcat11/webapps/ 
 
+# Run App as User
 USER ${USER_NAME}
 
 ## Install project requirements, build project
