--- a/python-poetry-pipeline/Dockerfile
+++ b/python-poetry-pipeline/Dockerfile
@@ -5,8 +5,9 @@ ARG USER_ID=1001
 ARG GROUP_ID=1001
 ENV USER_NAME=default
 
-ENV HOME="/app"
-ENV PATH="/app/.local/bin:${PATH}"
+ENV HOME="/home/${USER_NAME}"
+ENV PATH="${HOME}/.local/bin:${PATH}"
+ENV APP="/app"
 
 ENV PYTHONUNBUFFERED=1
 
@@ -19,11 +20,12 @@ RUN dnf -y update-minimal --security --sec-severity=Important --sec-severity=Cri
     # clear cache
     dnf clean all
 
-WORKDIR ${HOME}
 
 # Create user and set permissions
 RUN groupadd -g ${GROUP_ID} ${USER_NAME} && \
     useradd -u ${USER_ID} -r -g ${USER_NAME} -d ${HOME} -s /bin/bash ${USER_NAME} 
+
+WORKDIR ${HOME}
 
 # install poetry
 RUN curl -sSL https://install.python-poetry.org | python3 -
@@ -44,14 +46,15 @@ USER ${USER_NAME}
 FROM base
 
 ## Move to app folder, copy project into container
-WORKDIR ${HOME}
+WORKDIR ${APP}
 ## REPLACE: replace this COPY statement with project specific files/folders
 COPY . . 
 
-# Check home
-RUN chown -R ${USER_NAME}:${USER_NAME} ${HOME} && \
-    chmod -R 0750 ${HOME}
+# Check App permissions
+RUN chown -R ${USER_NAME}:${USER_NAME} ${APP} && \
+    chmod -R 0750 ${APP}
 
+# Run App as User
 USER ${USER_NAME}
 
 ## Install project requirements, build project
