--- a/python-uv-pipeline/Dockerfile
+++ b/python-uv-pipeline/Dockerfile
@@ -4,8 +4,9 @@ ARG USER_ID=1001
 ARG GROUP_ID=1001
 ENV USER_NAME=default
 
-ENV HOME="/app"
-ENV PATH="/app/.local/bin:${PATH}"
+ENV HOME="/home/${USER_NAME}"
+ENV PATH="${HOME}/.local/bin:${PATH}"
+ENV APP="/app"
 
 ENV PYTHONUNBUFFERED=1
 
@@ -18,14 +19,14 @@ RUN dnf -y update-minimal --security --sec-severity=Important --sec-severity=Cri
     # clear cache
     dnf clean all
 
-WORKDIR ${HOME}
-
 # Create user and set permissions
 RUN groupadd -g ${GROUP_ID} ${USER_NAME} && \
     useradd -u ${USER_ID} -r -g ${USER_NAME} -d ${HOME} -s /bin/bash ${USER_NAME} 
 
+WORKDIR ${HOME}
+
 # Install uv, latest python and ruff 
-RUN curl -LsSf https://astral.sh/uv/install.sh | env UV_INSTALL_DIR="${HOME}/.local/bin" sh
+RUN curl -LsSf https://astral.sh/uv/install.sh | env UV_INSTALL_DIR="$HOME/.local/bin" sh
 RUN uv tool install ruff@latest
 
 #-----------------------------
@@ -43,16 +44,16 @@ USER ${USER_NAME}
 # Prod target
 FROM base
 
-## CD into App folder, copy project from host to /app
-WORKDIR ${HOME}
-
+## Move to app folder, copy project into container
+WORKDIR ${APP}
 ## REPLACE: replace this COPY statement with project specific files/folders
-COPY . .
+COPY . . 
 
-# Check home
-RUN chown -R ${USER_NAME}:${USER_NAME} ${HOME} && \
-    chmod -R 0750 ${HOME}
+# Check App permissions
+RUN chown -R ${USER_NAME}:${USER_NAME} ${APP} && \
+    chmod -R 0750 ${APP}
 
+# Run App as User
 USER ${USER_NAME}
 
 ## Install project requirements, build project
