--- a/rust-pipeline/Dockerfile
+++ b/rust-pipeline/Dockerfile
@@ -5,9 +5,9 @@ ARG USER_ID=1001
 ARG GROUP_ID=1001
 ENV USER_NAME=default
 
-ENV HOME="/app"
-ENV PATH="/app/.local/bin:${PATH}"
-
+ENV HOME="/home/${USER_NAME}"
+ENV PATH="${HOME}/.local/bin:${PATH}"
+ENV APP="/app"
 
 USER root
 
@@ -18,11 +18,11 @@ RUN dnf -y update-minimal --security --sec-severity=Important --sec-severity=Cri
     # clear cache
     dnf clean all
 
-WORKDIR ${HOME}
-
 # Create user and set permissions
 RUN groupadd -g ${GROUP_ID} ${USER_NAME} && \
     useradd -u ${USER_ID} -r -g ${USER_NAME} -d ${HOME} -s /bin/bash ${USER_NAME} 
+
+WORKDIR ${HOME}
 
 # Install rustup and rust
 ENV CARGO_HOME=${HOME}
@@ -46,13 +46,13 @@ USER ${USER_NAME}
 FROM base
 
 ## Move to app folder, copy project into container
-WORKDIR ${HOME}
+WORKDIR ${APP}
 ## REPLACE: replace this COPY statement with project specific files/folders
 COPY . . 
 
-#Check home
-RUN chown -R ${USER_NAME}:${USER_NAME} ${HOME} && \
-    chmod -R 0750 ${HOME}
+# Check App permissions
+RUN chown -R ${USER_NAME}:${USER_NAME} ${APP} && \
+    chmod -R 0750 ${APP}
 
 ## Install project requirements, build project
 RUN . $CARGO_HOME/env && cargo build --release
@@ -61,5 +61,6 @@ RUN . $CARGO_HOME/env && cargo build --release
 
 ## Expose port and run app
 EXPOSE 8080
+# Run App as User
 USER ${USER_NAME}
 CMD [ "/app/cargo", "run" ]
