fix(home): fix default home

--- a/node-pipeline/Dockerfile
+++ b/node-pipeline/Dockerfile
@@ -6,6 +6,7 @@ ENV USER_NAME=default
 
 ENV HOME="/home/${USER_NAME}"
 ENV PATH="${HOME}/.local/bin:${PATH}"
+# Production App will be stored in /app
 ENV APP="/app"
 
 USER root
@@ -18,14 +19,10 @@ dnf install git nano nodejs npm -y; \
 # clear cache
 dnf clean all
 
-WORKDIR ${HOME}
-
 # Create user and set permissions
 RUN groupadd -g ${GROUP_ID} ${USER_NAME} && \
-    useradd -u ${USER_ID} -r -g ${USER_NAME} -d ${HOME} -s /bin/bash ${USER_NAME} 
+    useradd -u ${USER_ID} -r -g ${USER_NAME} -m -d ${HOME} -s /bin/bash ${USER_NAME} 
 
-
-WORKDIR ${HOME}
 #-----------------------------
 
 # Dev target
@@ -36,6 +33,7 @@ RUN chmod +x /tmp/devtools.sh && /tmp/devtools.sh
 # Open dev port
 EXPOSE 8000
 USER ${USER_NAME}
+WORKDIR ${HOME}
 
 # DEPLOYMENT EXAMPLE:
 #-----------------------------
@@ -54,6 +52,7 @@ RUN chown -R ${USER_NAME}:${USER_NAME} ${APP} && \
 
 # Run App as User
 USER ${USER_NAME}
+WORKDIR ${HOME}
 
 ## Install project requirements, build project
 RUN npm install lite-server --save-dev; \
