--- a/python-uv-pipeline/Dockerfile
+++ b/python-uv-pipeline/Dockerfile
@@ -6,6 +6,7 @@ ENV USER_NAME=default
 
 ENV HOME="/home/${USER_NAME}"
 ENV PATH="${HOME}/.local/bin:${PATH}"
+# Production App will be stored in /app
 ENV APP="/app"
 
 ENV PYTHONUNBUFFERED=1
@@ -21,9 +22,8 @@ RUN dnf -y update-minimal --security --sec-severity=Important --sec-severity=Cri
 
 # Create user and set permissions
 RUN groupadd -g ${GROUP_ID} ${USER_NAME} && \
-    useradd -u ${USER_ID} -r -g ${USER_NAME} -d ${HOME} -s /bin/bash ${USER_NAME} 
+    useradd -u ${USER_ID} -r -g ${USER_NAME} -m -d ${HOME} -s /bin/bash ${USER_NAME} 
 
-WORKDIR ${HOME}
 
 # Install uv, latest python and ruff 
 RUN curl -LsSf https://astral.sh/uv/install.sh | env UV_INSTALL_DIR="$HOME/.local/bin" sh
@@ -37,6 +37,7 @@ COPY .devcontainer/devtools.sh /tmp/devtools.sh
 # Install extra dev tools as root, then run as default user
 RUN chmod +x /tmp/devtools.sh && /tmp/devtools.sh  
 USER ${USER_NAME}
+WORKDIR ${HOME}
 
 # DEPLOYMENT EXAMPLE:
 #-----------------------------
@@ -55,6 +56,7 @@ RUN chown -R ${USER_NAME}:${USER_NAME} ${APP} && \
 
 # Run App as User
 USER ${USER_NAME}
+WORKDIR ${HOME}
 
 ## Install project requirements, build project
 RUN uv venv && \
