chore(extentions): bump docker to new container

--- a/golang-pipelne/.devcontainer/devcontainer.json
+++ b/golang-pipelne/.devcontainer/devcontainer.json
@@ -27,7 +27,7 @@
 		  "extensions": [
 			"golang.Go",
 			// optional
-			"ms-azuretools.vscode-docker",
+			"ms-azuretools.vscode-containers",
 			"Semgrep.semgrep",
 			"AquaSecurityOfficial.trivy-vulnerability-scanner",
 			"GitHub.vscode-github-actions",
