--- a/cpp-pipeline/.devcontainer/devcontainer.json
+++ b/cpp-pipeline/.devcontainer/devcontainer.json
@@ -25,7 +25,7 @@
 		  "extensions": [
 			"ms-vscode.cpptools-extension-pack",
 			// optional
-			"ms-azuretools.vscode-docker",
+			"ms-azuretools.vscode-containers",
 			"Semgrep.semgrep",
 			"AquaSecurityOfficial.trivy-vulnerability-scanner",
 			"GitHub.vscode-github-actions",
