--- a/node-pipeline/.devcontainer/devcontainer.json
+++ b/node-pipeline/.devcontainer/devcontainer.json
@@ -34,7 +34,7 @@
 			// "msjsdiag.vscode-react-native",
 			// Optional
 			"firefox-devtools.vscode-firefox-debug",
-			"ms-azuretools.vscode-docker",
+			"ms-azuretools.vscode-containers",
 			"Semgrep.semgrep",
 			"AquaSecurityOfficial.trivy-vulnerability-scanner",
 			"GitHub.vscode-github-actions",
