--- a/python-pipeline/.devcontainer/devcontainer.json
+++ b/python-pipeline/.devcontainer/devcontainer.json
@@ -33,7 +33,7 @@
 			"ms-python.black-formatter",
 			"ms-python.flake8",
 			"ms-python.mypy-type-checker",
-			"ms-azuretools.vscode-docker",
+			"ms-azuretools.vscode-containers",
 			"Semgrep.semgrep",
 			"AquaSecurityOfficial.trivy-vulnerability-scanner",
 			"GitHub.vscode-github-actions",
