--- a/python-uv-pipeline/.devcontainer/devcontainer.json
+++ b/python-uv-pipeline/.devcontainer/devcontainer.json
@@ -29,7 +29,7 @@
 			"charliermarsh.ruff",
 			// optional
 			"ms-python.mypy-type-checker", //replace with Red Knot when released
-			"ms-azuretools.vscode-docker",
+			"ms-azuretools.vscode-containers",
 			"Semgrep.semgrep",
 			"AquaSecurityOfficial.trivy-vulnerability-scanner",
 			"GitHub.vscode-github-actions",
