--- a/rust-pipeline/.devcontainer/devcontainer.json
+++ b/rust-pipeline/.devcontainer/devcontainer.json
@@ -30,7 +30,7 @@
 			"rust-lang.rust-analyzer",
 			// "ms-vscode.anycode-rust",
 			// optional
-			"ms-azuretools.vscode-docker",
+			"ms-azuretools.vscode-containers",
 			"Semgrep.semgrep",
 			"AquaSecurityOfficial.trivy-vulnerability-scanner",
 			"GitHub.vscode-github-actions",
