--- a/node-pipeline/.github/actions/node/action.yml
+++ b/node-pipeline/.github/actions/node/action.yml
@@ -62,7 +62,7 @@ runs:
     - name: Install Node
       uses: actions/setup-node@v4
       with:
-        node-version-file: '.nvmrc'
+        node-version: 'lts/*'
 
     - name: Install dependencies
       run: npm ci
